--- a/03-show_access_rules.yaml
+++ b/03-show_access_rules.yaml
@@ -1,18 +1,23 @@
 ---
 - hosts: all
-  connection: local
-  gather_facts: true
+  connection: httpapi
+  gather_facts: false
   tasks:
     
-    - name: show network facts
-      check_point.mgmt.cp_mgmt_network_facts:
-      ignore_errors: true
+  - name: show network facts
+    check_point.mgmt.cp_mgmt_network_facts:
+    ignore_errors: true
 
-    - name: show-access-rulebase
-      check_point.mgmt.cp_mgmt_access_rule_facts:
-        details_level: standard
-        limit: 20
-        name: Network
-        offset: 0
-        use_object_dictionary: true
-      ignore_errors: true
+  - name: show-access-rulebase
+    check_point.mgmt.cp_mgmt_access_rule_facts:
+      details_level: standard
+      limit: 20
+      name: Network
+      offset: 0
+      use_object_dictionary: true
+    ignore_errors: true
+
+  - shell: |
+      ansible-galaxy collection list
+    delegate_to: localhost
+
