--- a/03-show_access_rules.yaml
+++ b/03-show_access_rules.yaml
@@ -2,8 +2,12 @@
 - hosts: all
   connection: local
   gather_facts: false
+  pre_tasks:
+  - name : Install Collections dependencies
+    shell: ansible-galaxy install -r collections/requirements.yaml
+    delegate_to: 127.0.0.1
+      
   tasks:
-    
   - name: show network facts
     check_point.mgmt.cp_mgmt_network_facts:
     ignore_errors: true
