--- a/03-show_access_rules.yaml
+++ b/03-show_access_rules.yaml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  connection: local
+  connection: httpapi
   gather_facts: false
   pre_tasks:
   - name : Install Collections dependencies
