--- a/01-ping_test.yaml
+++ b/01-ping_test.yaml
@@ -1,5 +1,10 @@
 ---
 - hosts: all
+  connection: httpapi
   gather_facts: false
+  pre_tasks:
+  - name : Install Collections dependencies
+    shell: ansible-galaxy install -r collections/requirements.yaml
+    delegate_to: 127.0.0.1
   tasks:
     - ping:
