--- a/05-add_rule.yaml
+++ b/05-add_rule.yaml
@@ -13,4 +13,18 @@
   - name: set CMA IP
     set_fact:
       g_cma_ip: "10.70.32.26"
-  
+- name: work on CMA
+  hosts: "{{ hostvars['localhost']['g_cma_ip'] }}"
+  tasks:
+  - name: show-access-rulebase
+    check_point.mgmt.cp_mgmt_access_rule_facts:
+      details_level: standard
+      limit: 20
+      name: Network
+      offset: 0
+      use_object_dictionary: true
+    ignore_errors: true  
+  - name: add SMTP rule
+    check_point.mgmt.cp_mgmt_access_rule:
+      auto_publish_session: true
+      action: "Accept"
