--- a/05-add_rule.yaml
+++ b/05-add_rule.yaml
@@ -19,9 +19,9 @@
   - name: show-access-rulebase
     check_point.mgmt.cp_mgmt_access_rule_facts:
       details_level: standard
-#      limit: 20
       name: Network
-#      offset: 0
+      offset: 0
+#      limit: 20
 #      use_object_dictionary: true
     ignore_errors: true  
 #  - name: add SMTP rule
