--- a/05-add_rule.yaml
+++ b/05-add_rule.yaml
@@ -14,7 +14,7 @@
 - name: work on CMA
   hosts: "{{ hostvars['localhost']['g_cma_ip'] }}"
   connection: httpapi
-  gather_facts: false
+  gather_facts: true
   tasks:
   - name: show-access-layers
     cp_mgmt_access_layer_facts:
