--- a/05-add_rule.yaml
+++ b/05-add_rule.yaml
@@ -17,7 +17,7 @@
   gather_facts: false
   tasks:
   - name: show api versions
-    check_point.mgmt.cp_mgmt_show_api_versions
+    check_point.mgmt.cp_mgmt_show_api_versions:
   - name: show-access-layers
     check_point.mgmt.cp_mgmt_access_layer_facts:
       details_level: standard
