--- a/05-add_rule.yaml
+++ b/05-add_rule.yaml
@@ -27,7 +27,11 @@
     check_point.mgmt.cp_mgmt_access_rule_facts:
       details_level: standard
       layer: Network
-#      name: Network
+      name: Network
+      offset: 0
+      limit: 50
+      use_object_dictionary: false
+      version: 1.8.1
     ignore_errors: true  
 #  - name: add SMTP rule
 #    check_point.mgmt.cp_mgmt_access_rule:
