--- a/05-add_rule.yaml
+++ b/05-add_rule.yaml
@@ -26,7 +26,7 @@
   - name: show-access-rulebase
     check_point.mgmt.cp_mgmt_access_rule_facts:
       details_level: standard
-      layer: Network
+      # layer: Network
       name: Network
       offset: 0
       limit: 50
