--- a/05-add_rule.yaml
+++ b/05-add_rule.yaml
@@ -30,7 +30,7 @@
       name: Network
       offset: 0
       limit: 50
-      use_object_dictionary: false
+      use_object_dictionary: true
       version: 1.7
     ignore_errors: true  
 #  - name: add SMTP rule
